# go-php

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile3  Makefile  README.md  appveyor.yml  context.c  context.go  context_test.go  engine.c  engine.go  engine_test.go  go.mod  php.go  php7-debian.go  php7-static.go  php7.go  php8-debian.go  php8-static.go  php8.go  php80-debian.go  php81-debian.go  php81-static.go  php81.go  receiver.c  receiver.go  receiver_test.go  value.c  value.go  value_test.go
.github/actions/setup-php/: action.yml
.github/scripts/: install.sh
.github/workflows/: go.yml  main.yml
include/: context.h  engine.h  gophp_context.c  gophp_context.h  gophp_engine.c  gophp_engine.h  gophp_object.c  gophp_object.h  gophp_receiver.c  gophp_receiver.h  receiver.h  value.h
include/php8/: _receiver.h
includes/: context.c  receiver.c
php-tools/: Dockerfile  build-php.sh  docker-entrypoint.sh  install-php.sh
src/: _receiver.c  _value.c  context.c  engine.c  receiver.c  value.c
src/php8/: _receiver.c  _value.c
